--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 script:
     - wget https://dl.itch.ovh/butler/linux-amd64/cave-commands/butler
     - chmod +x butler
-    - export "PATH=$PATH:$PWD"
+    - export PATH="$PATH:$PWD"
     - butler -V
+    - export DEBUG="*"
     - npm test
