--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,13 @@
   "[typescript]": {
     "editor.formatOnSave": true
   },
-  "prettier.trailingComma": "all"
+  "prettier.trailingComma": "all",
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "lib/**": true,
+  }
 }
