--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "homepage": "https://github.com/itchio/node-buse#readme",
   "devDependencies": {
     "@types/node": "^8.0.47",
+    "@types/rimraf": "^2.0.2",
     "@types/split2": "^2.1.6",
     "prettier": "^1.7.4",
+    "rimraf": "^2.6.2",
     "typescript": "^2.6.1"
   },
   "dependencies": {
