--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "keywords": [
     "butler"
   ],
+  "files": [
+    "lib"
+  ],
   "author": "Amos Wenger <amos@itch.io>",
   "license": "MIT",
   "bugs": {
