--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "debug": "^3.1.0",
-    "split2": "^2.2.0"
+    "split2": "^2.2.0",
+    "ts-itchio-api": "^1.0.0"
   }
 }
