--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "declaration": true
   },
   "include": [
-    "src/**/*.ts",
-    "generated/**/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules"
