--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/node": "^8.0.47",
     "@types/rimraf": "^2.0.2",
     "@types/split2": "^2.1.6",
+    "@types/which": "^1.3.1",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2",
-    "typescript": "^2.6.1"
+    "typescript": "^2.6.1",
+    "which": "^1.3.0"
   },
   "dependencies": {
     "debug": "^3.1.0",
