--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "node-buse",
   "version": "3.10.0",
   "description": "Node.js library for the butler API",
-  "main": "lib/index.js",
+  "main": "index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "prepublish": "npm run compile",
-    "compile": "tsc",
+    "compile": "tsc && babel lib -d lib.development && cross-env NODE_ENV=production babel lib -d lib.production",
     "test": "npm run compile && npm run tape",
     "tape": "node lib/tests/index.js"
   },
@@ -18,7 +18,10 @@
     "butler"
   ],
   "files": [
-    "lib"
+    "lib",
+    "lib.development",
+    "lib.production",
+    "index.js"
   ],
   "author": "Amos Wenger <amos@itch.io>",
   "license": "MIT",
@@ -31,6 +34,11 @@
     "@types/rimraf": "^2.0.2",
     "@types/split2": "^2.1.6",
     "@types/which": "^1.3.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-async-to-module-method": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "cross-env": "^5.1.4",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2",
     "typescript": "^2.6.1",
