Rename to node-butlerd, update copyright, update to butler daemon command requirements

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ script:
     - chmod +x butler
     - export PATH="$PATH:$PWD"
     - butler -V
-    - export DEBUG="buse:*"
+    - export DEBUG="butlerd:*"
     - npm test
