--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-butlerd",
+  "name": "butlerd",
   "version": "6.0.0",
   "description": "Node.js library for butlerd, the butler daemon",
   "main": "index.js",
