--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "homepage": "https://github.com/itchio/node-butlerd#readme",
   "devDependencies": {
+    "@types/eventsource": "^1.0.2",
     "@types/node": "^8.0.47",
+    "@types/node-fetch": "^2.1.1",
     "@types/rimraf": "^2.0.2",
     "@types/split2": "^2.1.6",
     "@types/which": "^1.3.1",
@@ -48,6 +50,8 @@
   "dependencies": {
     "crypto-random-string": "^1.0.0",
     "debug": "^3.1.0",
+    "eventsource": "^1.0.5",
+    "node-fetch": "^2.1.2",
     "split2": "^2.2.0"
   }
 }
