--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "6.1.1",
   "description": "Node.js library for butlerd, the butler daemon",
   "main": "index.js",
+  "browser": {
+    "index.js": "browser.js"
+  },
   "types": "lib/index.d.ts",
   "scripts": {
-    "prepublish": "npm run compile",
+    "prepare": "npm run compile",
     "precompile": "tsc",
     "compile": "tsc && babel lib -d lib.development && cross-env NODE_ENV=production babel lib -d lib.production",
     "test": "npm run precompile && npm run tape",
@@ -44,6 +47,7 @@
     "cross-env": "^5.1.4",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2",
+    "rollup": "^0.62.0",
     "typescript": "^2.6.1",
     "which": "^1.3.0"
   },
