--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "lib",
     "lib.development",
     "lib.production",
-    "index.js"
+    "index.js",
+    "browser.js",
+    "electron-main.js"
   ],
   "author": "Amos Wenger <amos@itch.io>",
   "license": "MIT",
