--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ node_js:
     - "8"
 
 script:
-    - wget https://dl.itch.ovh/butler/linux-amd64/head/butler?t=$(date +%s) -O butler --progress=dot
+    - wget https://broth.itch.ovh/butler/linux-amd64/LATEST/.zip -O butler.zip --progress=dot
+    - unzip butler.zip
     - chmod +x butler
     - export PATH="$PATH:$PWD"
     - butler -V
     - export DEBUG="butlerd:*"
-    - npm test
+    - npm run precompile
+    - npm run node-test
