--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es2017",
     "lib": ["es2015", "dom"],
     "module": "commonjs",
-    "declaration": true
+    "declaration": true,
+    "noEmitOnError": false
   },
   "include": [
     "src/**/*.ts"
