--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "target": "es2017",
     "lib": ["es2015", "dom"],
     "module": "commonjs",
-    "declaration": true,
-    "noEmitOnError": false
+    "declaration": true
   },
   "include": [
     "src/**/*.ts"
