--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-plugin-transform-async-to-module-method": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "cross-env": "^5.1.4",
-    "electron": "^2.0.4",
+    "electron": "^2.0.8",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2",
     "typescript": "^2.6.1",
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "debug": "^3.1.0",
-    "split2": "^2.2.0"
+    "split2": "^2.2.0",
+    "uuid": "^3.3.2"
   }
 }
