--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "lib",
     "target": "es2017",
-    "lib": ["es2015", "dom"],
+    "lib": ["es2015"],
     "module": "commonjs",
     "declaration": true
   },
