--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-    - "9"
+    - "12"
 
 script:
     - wget https://broth.itch.ovh/butler/linux-amd64-head/LATEST/.zip -O butler.zip --progress=dot
@@ -9,6 +9,4 @@ script:
     - export PATH="$PATH:$PWD"
     - butler -V
     - export DEBUG="butlerd:*"
-    - npm run precompile
-    - npm run node-test
-    - xvfb-run npm run electron-test
+    - npm run test
