--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "butler"
   ],
   "files": [
-    "lib",
-    "index.js"
+    "lib"
   ],
   "author": "Amos Wenger <amos@itch.io>",
   "license": "MIT",
