--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
     "outDir": "lib",
-    "target": "es2017",
-    "lib": ["es2015"],
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "module": "commonjs",
     "declaration": true,
-    "strict": true
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "src/**/*.ts"
