--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/itchio/node-butlerd#readme",
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/node": "^24.10.1",
     "@types/split2": "^4.2.3",
     "@types/which": "^3.0.4",
@@ -37,7 +38,7 @@
     "which": "^1.3.0"
   },
   "dependencies": {
-    "debug": "^3.1.0",
+    "debug": "^4.4.3",
     "split2": "^3.0.0",
     "uuid": "^3.3.2"
   }
