--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "butlerd",
-  "version": "14.1.0",
+  "name": "@itchio/butlerd",
+  "version": "15.0.0",
   "description": "Node.js library for butlerd, the butler daemon",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
